# Investment-Overview

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  =3.12  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  alembic.ini  pyproject.toml  requirements_and_project_overview.md  run_dashboard.bat  run_dashboard.py  run_dashboard.sh  run_dashboard.vbs
.github/: copilot-instructions.md
.github/rulesets/: protect-main.json
.github/workflows/: ci.yml  pages.yml  release.yml  tag-on-version-bump.yml
docs/: README.md  architecture.md  centralized_data_export_plan.md  centralized_data_pull_plan.md  deferred_symbols_freshness_plan.md  fx_kpi_cold_start_regeneration_plan.md  graph-unification-plan.md  investment-overview-polling-log (1).txt  investment-overview-polling-log (44).txt  investment-overview-polling-log.txt  maintenance_audit.md  market_open_token_burn_fix_plan.md  mobile_android_app_proposal.md  mobile_export_schema.md  pre_v3_audit_remaining.md  provider_rate_limit_audit.md  python_desktop_parity_plan.md  session_close_completeness_plan.md  setup_simplification_plan.md  single_brain_pull_plan.md  spreadsheet_parity_comparison.md  tiingo_fallback_plan.md  tiingo_forex_fallback.md  tiingo_fx_settled_spot_plan.md  tiingo_fx_worker_update.md  tiingo_polling_storm_cleanup_plan.md  time_alignment_plan.md  user_guide.md  v2.0_split_cloud_security_plan.md  v2.10.1-plan.md  v2.2-feature-bump-plan.md  v2.8-cleanup-plan.md  v2.8-improvements-plan.md  v3.0_live_web_companion_proposal.md  v5.0_release_plan.md  weekly_chart_session_axis_plan.md  windows_install_troubleshooting.md
docs/Comparison Files/: 2023.csv  2024.csv  2025.csv  2026.csv  README.md  audit-export-2026-05-31 (1).json  audit-export-2026-05-31.json  audit-export-2026-06-01.json  customActivityReport.xlsx
docs/history/: README.md  deferred_symbols_freshness_plan.md  pre_v3_audit_remaining.md  setup_simplification_plan.md  v2.2-feature-bump-plan.md  weekly_chart_session_axis_plan.md
installer/: PORTABLE_README.txt  README.md  Run-InvestmentDashboard.cmd  __init__.py  bootstrap.py  installer.spec  launcher.py  paths.py  portable_launcher.py  version.py
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_v1_2_snapshots_cache.py  0003_v1_4_vanguard_xlsx_source.py  0004_v2_split_instrument_overrides.py  0005_v2_2_instrument_enrichment.py  0006_v2_9_transaction_net_usd.py  0007_v2_10_fidelity_share_distribution_split.py  0008_v2_10_1_price_split_cache.py  0009_v3_0_rebrand_savings_account.py  0010_v3_0_fx_history_lookup_index.py  0011_v3_5_3_allocation_settings.py  0012_v3_5_4_intraday_value_cache.py  0012_v3_6_3_price_market_time.py  0013_v3_6_3_price_market_time.py  0014_v3_9_3_intraday_market_component.py
src/investment_dashboard/: __init__.py  boot.py  config.py  db.py  logging.py  main.py  redaction.py  shutdown.py
tests/: conftest.py  test_changelog_version.py  test_config_log_paths.py  test_console_scripts.py  test_db_tiers.py  test_export_snapshot.py  test_logging.py  test_migration_0004.py  test_migration_0005.py  test_migration_0006.py  test_migration_0007.py  test_migration_0009.py  test_migration_0011.py  test_mobile_export.py  test_public_readiness.py  test_redaction.py  test_run_dashboard_launcher.py  test_shutdown.py  test_split_db.py
tests/adapters/: test_frankfurter_client.py  test_locale_parsing.py  test_retry.py  test_row_validation.py  test_tiingo_client.py  test_yfinance_client.py
tests/api/: test_api.py
tests/domain/: test_allocation.py  test_attribution.py  test_currency.py  test_currency_effect.py  test_dividends.py  test_market_hours.py  test_returns.py  test_risk.py  test_risk_extras.py  test_session_fx.py
tests/e2e/: test_app_smoke.py
tests/installer/: conftest.py  test_bootstrap.py  test_launcher.py  test_version.py
tests/models/: test_schema.py
tests/parity/: test_vectors_fresh.py  vectors.json
tests/readmodels/: test_live_graphs.py  test_readmodels.py
tests/repositories/: test_app_config_repo.py  test_instrument_overrides_repo.py  test_repo_updates.py  test_repos.py  test_tiingo_state_repo.py  test_transactions_repo_edit.py
tests/services/: test_analytics_prefs_service.py  test_audit_export_service.py  test_auto_publish.py  test_auto_refresh.py  test_benchmark_service.py  test_cache_janitor.py  test_chart_prefs_service.py  test_clock_format_service.py  test_daily_growth_view.py  test_database_reset_service.py  test_diagnostics_service.py  test_display_currency.py  test_error_reporting.py  test_fetch_report.py  test_fx_aware_snapshots.py  test_fx_eod_source.py  test_fx_history_fallback.py  test_fx_live_spot.py  test_fx_yfinance_history.py  test_historical_valuation.py  test_history_refresh_progress.py  test_importer_service.py  test_instrument_enrichment_service.py  test_intraday_snapshots_service.py  test_investing_power.py  test_leading_gap_backfill.py  test_logging_service.py  test_loop_watchdog.py  test_manual_entry.py  test_metrics_golden_master.py  test_onboarding_service.py  test_price_probe_service.py  test_provider_status.py  test_publish_service.py  test_pull_log.py  test_refresh_status.py  test_risk_free_service.py  test_runtime_status.py  test_services.py  test_smart_refresh.py  (+13 more)
tests/storage/: test_atomic_io.py  test_blob_crypto.py  test_cloud_and_paths.py  test_file_safety.py  test_move.py  test_tool_clis.py
tests/tools/: test_publish_web_cli.py
tests/ui/: __init__.py  test_added_columns_guard.py  test_analytics_attribution_currency.py  test_analytics_query.py  test_boot_and_layout.py  test_calculator_helpers.py  test_calculator_query.py  test_calculator_view.py  test_charts.py  test_connectivity.py  test_deferred.py  test_deposits_query.py  test_dual_currency_v25.py  test_forms.py  test_help_page.py  test_holdings_fx_as_of.py  test_ledger_query.py  test_monthly_projection_and_growth.py  test_movers.py  test_overview_query.py  (+15 more)
tools/: gen_parity_vectors.py
web/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
(+364 files in other folders)
