[project]
name = "investment-dashboard"
version = "5.0.10"
description = "Single-user, locally-hosted investment tracking dashboard unifying Vanguard, Fidelity, and Savings Bank with XIRR/TWR/CAGR analytics in USD and EUR."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "D. Henke" }]
license = { text = "PolyForm-Noncommercial-1.0.0" }
keywords = ["investing", "portfolio", "xirr", "twr", "nicegui"]
classifiers = [
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "nicegui>=3.12.0,<4",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.14.2",
    "httpx>=0.27",
    "yfinance>=0.2.40",
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.13",
    "python-dateutil>=2.9",
    "plotly>=5.22",
    "openpyxl>=3.1",
    "cryptography>=48.0.1",
    # OS keychain access for the live-web companion secrets (mobile passphrase
    # and GitHub publish token) and the optional synced-tier passphrase. Kept in
    # core deps so the companion works out of the box; only the heavy SQLCipher
    # driver below stays optional.
    "keyring>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "types-python-dateutil",
]
encrypted = [
    # SQLCipher Python binding for optional encryption-at-rest of the synced
    # ledger/config tiers. ``pysqlcipher3`` is the primary; ``sqlcipher3-binary``
    # is the documented fallback when the upstream wheel isn't available on the
    # user's platform. (``keyring`` lives in the core dependencies now.)
    "pysqlcipher3>=1.2 ; sys_platform != 'win32'",
]

[project.scripts]
investment-dashboard = "investment_dashboard.main:run"
inv-dashboard-api = "investment_dashboard.api.app:run"
inv-dashboard-export-snapshot = "investment_dashboard.tools.export_snapshot:main"
inv-dashboard-split-db = "investment_dashboard.tools.split_db:main"
inv-dashboard-repair-sidecar = "investment_dashboard.tools.repair_sidecar:main"
inv-dashboard-backup = "investment_dashboard.tools.backup:main"
inv-dashboard-publish-web = "investment_dashboard.tools.publish_web:main"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/investment_dashboard"]

# -----------------------------------------------------------------------------
# Ruff: lint + format. Reasonable strict defaults; per-folder relaxations.
# -----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
extend-exclude = ["migrations/versions"]

[tool.ruff.lint]
select = [
    "E", "F", "W",      # pycodestyle / pyflakes
    "I",                # isort
    "B",                # bugbear
    "UP",               # pyupgrade
    "SIM",              # simplify
    "RUF",              # ruff-specific
    "N",                # pep8-naming
    "PL",               # pylint subset
    "PT",               # pytest style
    "TID",              # tidy imports
]
ignore = [
    "PLR0913",  # too many arguments (financial functions take many)
    "PLR2004",  # magic numbers in tests
    "E501",     # handled by formatter
    # Mathematical Unicode (−, ×, α, β, π, √, ∏, Σ) is intentional in
    # docstrings and comments describing financial formulas — these are
    # not "ambiguous" in domain context.
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "S101", "N802", "PLC0415"]
"src/investment_dashboard/domain/returns.py" = ["PLR0911", "PLR0912"]
"migrations/**" = ["N806", "I001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# -----------------------------------------------------------------------------
# Mypy: strict on the financial-math layer only (per spec §2).
# -----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = "investment_dashboard.domain.*"
strict = true
disallow_any_generics = true
disallow_untyped_defs = true
warn_return_any = true

# -----------------------------------------------------------------------------
# Pytest
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "network: tests that hit real external APIs; skipped unless --run-network is passed",
]
filterwarnings = [
    # Treat any unexpected warning as an error so new deprecations from our own
    # code (or dependencies) surface in CI instead of scrolling past silently.
    # Known, un-actionable third-party notices are explicitly allow-listed below.
    "error",
    "ignore::DeprecationWarning:yfinance.*",
    "ignore::DeprecationWarning:pandas.*",
    # FastAPI's TestClient re-exports Starlette's, which warns that pinning
    # `httpx` (rather than the not-yet-released `httpx2`) is deprecated. This
    # is a transitive-dependency notice we cannot action from our own code.
    "ignore:Using `httpx` with `starlette.testclient` is deprecated:UserWarning",
]

[tool.coverage.run]
source = ["src/investment_dashboard"]
branch = true
omit = ["src/investment_dashboard/main.py", "src/investment_dashboard/ui/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
